--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -11,13 +11,13 @@
 			<div class="section-right button-size">Test</div>
 			<div class="section-right button-size">Jobs</div>
 		</div>
-		<div class="body">
-			<div class="filler"></div>
-			<div class="content-container">
+		<div class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-8">
 				{% block 'body' %}
 				{% endblock %}
 			</div>
-			<div class="filler"></div>
+			<div class="col-md-2"></div>
 		</div>
 	</body>
 </html>
