--- a/scss/index.scss
+++ b/scss/index.scss
@@ -35,26 +35,6 @@ body {
 	background: rgb(241, 241, 241);
 }
 
-.body {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: flex-start;
-	align-content: stretch;
-	align-items: stretch;
-	.filler {
-		order: 0;
-		flex: 0 1 auto;
-		flex-basis: 20%;
-		align-self: auto;
-	}
-	.content-container {
-		order: 0;
-		flex: 1 1 auto;
-		align-self: auto;
-	}
-}
-
 .header {
 	width: 100%;
 	height: 40px;
@@ -99,4 +79,13 @@ body {
 	width: 100%;
 	padding: 10px;
 	background: white;
+	margin: 10px;
+}
+
+.row {
+	margin: 0;
+}
+
+.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
+	padding: 0;
 }
