--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,20 @@
 {% extends 'wrapper.html' %} 
 {% block 'body' %}
-<h1>ShitStack</h1>
-<div class="panel"></div>
+
+<div class="panel">
+	<h1>ShitStack</h1>
+	<h1>Helping you choose a shitty webstack for your next shitty project, so you can write more shitcode.</h1>
+</div>
+<div class="panel">
+	<p>How to use</p>
+	<form method="POST" action=".">
+		{% csrf_token %}
+		<button type="submit" value="Submit">Generate</button>
+	</form>
+</div>
+{% if result %}
+	<div class="panel">
+		<p>RESULT</p>
+	</div>
+{% endif %}
 {% endblock %}
