--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 
 <div class="panel">
 	<h1>ShitStack</h1>
-	<h1>Helping you choose a shitty webstack for your next shitty project, so you can write more shitcode.</h1>
+	<h4>Helping you choose a shitty webstack for your next shitty project, so you can write more shitcode.</h4>
 </div>
 <div class="panel">
 	<p>How to use</p>
@@ -15,6 +15,7 @@
 {% if result %}
 	<div class="panel">
 		<p>RESULT</p>
+		{{result}}
 	</div>
 {% endif %}
 {% endblock %}
