--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -5,7 +5,7 @@
 		<!-- <link rel="stylesheet" href="/static/vendor/materialize.min.css" /> -->
 	</head>
 	<body>
-		<div class="header">
+		<div class="top-bar">
 			<div class="section-left logo">ShitStack</div>
 			<div class="section-middle"></div>
 			<div class="section-right button-size">Test</div>
